syntax = "proto3";
package temperature_grpc;
option go_package = "/grpc";


message Message {
  string value = 1;
}

message SensorIdDate {
  string sensorId = 1;
  string date = 2;
}

service TempService {
  rpc GetDailyMaxTempByDateAndByID(SensorIdDate) returns (Message) {}
}